syntax = "proto3";

package selfie.post.v1;

import "common.proto";

service PostService {
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
    rpc GetPost(GetPostRequest) returns (GetPostResponse);
    rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
    rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
    rpc ListUserPosts(ListUserPostsRequest) returns (ListUserPostsResponse);
    rpc GetFeed(GetFeedRequest) returns (GetFeedResponse);
    rpc LikePost(LikePostRequest) returns (LikePostResponse);
    rpc UnlikePost(UnlikePostRequest) returns (UnlikePostResponse);
    rpc GetLikes(GetLikesRequest) returns (GetLikesResponse);
    rpc AddComment(AddCommentRequest) returns (AddCommentResponse);
    rpc DeleteComment(DeleteCommentRequest) returns (DeleteCommentResponse);
    rpc GetComments(GetCommentsRequest) returns (GetCommentsResponse);
}

message Post {
    string id = 1;
    string user_id = 2;
    string caption = 3;
    repeated string media_urls = 4;
    int32 likes_count = 5;
    int32 comments_count = 6;
    bool is_liked = 7;
    selfie.common.v1.Timestamp created_at = 8;
    selfie.common.v1.Timestamp updated_at = 9;
}

message Comment {
    string id = 1;
    string post_id = 2;
    string user_id = 3;
    string content = 4;
    selfie.common.v1.Timestamp created_at = 5;
}

message CreatePostRequest {
    string user_id = 1;
    string caption = 2;
    repeated string media_ids = 3;
}

message CreatePostResponse {
    Post post = 1;
}

message GetPostRequest {
    string post_id = 1;
    string viewer_id = 2;
}

message GetPostResponse {
    Post post = 1;
}

message UpdatePostRequest {
    string post_id = 1;
    string user_id = 2;
    optional string caption = 3;
}

message UpdatePostResponse {
    Post post = 1;
}

message DeletePostRequest {
    string post_id = 1;
    string user_id = 2;
}

message DeletePostResponse {
    bool success = 1;
}

message ListUserPostsRequest {
    string user_id = 1;
    string viewer_id = 2;
    selfie.common.v1.PaginationRequest pagination = 3;
}

message ListUserPostsResponse {
    repeated Post posts = 1;
    selfie.common.v1.PaginationResponse pagination = 2;
}

message GetFeedRequest {
    string user_id = 1;
    selfie.common.v1.PaginationRequest pagination = 2;
}

message GetFeedResponse {
    repeated Post posts = 1;
    selfie.common.v1.PaginationResponse pagination = 2;
}

message LikePostRequest {
    string post_id = 1;
    string user_id = 2;
}

message LikePostResponse {
    bool success = 1;
}

message UnlikePostRequest {
    string post_id = 1;
    string user_id = 2;
}

message UnlikePostResponse {
    bool success = 1;
}

message GetLikesRequest {
    string post_id = 1;
    selfie.common.v1.PaginationRequest pagination = 2;
}

message GetLikesResponse {
    repeated string user_ids = 1;
    selfie.common.v1.PaginationResponse pagination = 2;
}

message AddCommentRequest {
    string post_id = 1;
    string user_id = 2;
    string content = 3;
}

message AddCommentResponse {
    Comment comment = 1;
}

message DeleteCommentRequest {
    string comment_id = 1;
    string user_id = 2;
}

message DeleteCommentResponse {
    bool success = 1;
}

message GetCommentsRequest {
    string post_id = 1;
    selfie.common.v1.PaginationRequest pagination = 2;
}

message GetCommentsResponse {
    repeated Comment comments = 1;
    selfie.common.v1.PaginationResponse pagination = 2;
}